# AdvancedCryptoTradingAgent

./: README.md  main.py  pyproject.toml
src/advanced_crypto_trading_agent/: __init__.py  config.py  trader.py
src/advanced_crypto_trading_agent/analysis/: fundamental.py  sentiment.py  technical.py
src/advanced_crypto_trading_agent/data/: binance_client.py
src/advanced_crypto_trading_agent/execution/: execution_engine.py
src/advanced_crypto_trading_agent/risk/: risk_manager.py
src/advanced_crypto_trading_agent/strategy/: hft_strategy.py
src/advanced_crypto_trading_agent/utils/: logger.py
src/advanced_crypto_trading_agent/web/: dashboard.py
tests/: test_dashboard.py  test_technical.py
