[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-crypto-trading-agent"
version = "0.1.0"
description = "Advanced crypto trading agent combining technical, fundamental, and sentiment analysis."
authors = [{name = "OpenAI Assistant"}]
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
